--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <title>The Hive | Shared Workspaces and Offices for Rent</title>
   <meta name="description"
     content="Rent meeting rooms & shared workspaces near you. Flexible hourly & daily plans available">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta property="og:title" content="Premium Coworking & Private Offices | Hive Workspaces" />
+<meta property="og:description" content="Discover premium coworking, private offices, and dedicated desks at Hive Workspaces. Flexible memberships, prime city locations, and luxury amenities—book a tour now." />
+<meta property="og:image" content="[URL to your main hero image]" />
+<meta property="og:url" content="https://hiveworkspaces.com/" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
